# PQC_FileTransfer

./: .dockerignore  .gitignore  Client.py  Dockerfile  README.md  Server.py  attack_signature.py  benchmark.py  benchmark_perform.py  client.py  damagedfile_test_client.py  docker-compose.yml  misskey_test_client.py  misssign_test_client.py  perform_test_client.py  perform_test_server.py  pyproject.toml  requirements.txt  run_client.py  run_server.py  run_tui.py  server.py  utils.py
attack/: attack_hash.py  attack_payload.py  attack_signature.py
attack_test/: attack_hash.py
benchmarks/: Compare_graph.py  benchmark.py  benchmark_RSA.py  benchmark_perform.py  compare_graph.py
src/pqc_transfer/: __init__.py  cli.py  client.py  exceptions.py  server.py
src/pqc_transfer/core/: client.py  handler.py  server.py
src/pqc_transfer/protocol/: chunk_base.py  chunk_receiver.py  chunk_sender.py  chunk_stream.py  constants.py  handshake.py  metadata.py  signature.py
src/pqc_transfer/ui/: file_picker.py  gui.py  subprocess_runner.py  tui.py
src/pqc_transfer/utils/: __init__.py  config.py  connection.py  crypto.py  key_manager.py  logger.py  network.py  ui.py
testcase/: misskey_test_client.py  misssign_test_client.py
tests/: conftest.py  misskey_test_client.py  misssign_test_client.py  test_error_handling.py  test_happy_path.py  test_misskey_client.py  test_misssign_client.py
