[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc_transfer"
version = "1.0.0"
description = "A Post-Quantum Cryptography (PQC) File Transfer Protocol"
authors = [{ name = "Developer", email = "developer@example.com" }]
requires-python = ">=3.9"
dependencies = ["cryptography>=48.0.0", "liboqs-python>=0.8.0"]

[project.scripts]
pqc-server = "pqc_transfer.server:main"
pqc-client = "pqc_transfer.client:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = ["liboqs", "liboqs-python"]
python_files = ["*_test_*.py", "test_*.py"]
