[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc_transfer"
version = "1.0.0"
description = "A Post-Quantum Cryptography (PQC) File Transfer Protocol"
authors = [{ name = "AgCat", email = "rkdqudwl0627@naver.com" }]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.0",
    "liboqs-python>=0.15.0",
    "pytest>=7.0.0",
    "windows-curses; sys_platform == 'win32'",
    "colorama; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "matplotlib>=3.10.0"]

[project.scripts]
pqc-server = "pqc_transfer.cli:main_server"
pqc-client = "pqc_transfer.cli:main_client"
pqc-tui = "pqc_transfer.ui.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = ["liboqs", "liboqs-python"]
python_files = ["*_test_*.py", "test_*.py"]
pythonpath = ["src"]
